# amplifier-module-provider-ollama

./: Makefile  README.md  pyproject.toml
amplifier_mod_provider_ollama/: __init__.py
amplifier_module_provider_ollama/: __init__.py
tests/: test_behavioral.py  test_validation.py
