[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-module-provider-ollama"
version = "1.0.0"
description = "Ollama provider module for Amplifier - Local LLM integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "amplifier-core>=1.0.0",
    "ollama>=0.3.0",
]

[project.entry-points."amplifier.modules"]
provider-ollama = "amplifier_mod_provider_ollama:mount"