[project]
name = "amplifier-module-provider-ollama"
version = "1.0.0"
description = "Ollama provider module for Amplifier - Local LLM integration"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "ollama>=0.3.0",
    "amplifier-core",
]

[project.entry-points."amplifier.modules"]
provider-ollama = "amplifier_module_provider_ollama:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources.amplifier-core]
path = "../amplifier-core"
editable = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_ollama",
]

[tool.hatch.metadata]
allow-direct-references = true
